--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -129,6 +129,8 @@ a {
 
         &.is-cta {
             margin-right: 0.8em;
+            white-space: nowrap;
+
             &:after {
                 content: '';
                 display: inline-block;
